# pysecretfile

./: README.md  pyproject.toml
secretfile/: __init__.py  cli.py  exceptions.py  secretfile.py
secretfile/backends/: __init__.py  memory.py  meta.py  vault.py
tests/: test_secretfile.py
