[tool.poetry]
name = "secretfile"
version = "0.1.0"
description = ""
authors = ["Tom Caruso <carusot42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hvac = "^1.1.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
secretfile = 'secretfile.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

